-
Type:
Bug
-
Status: Closed
-
Priority:
P1: Critical
-
Resolution: Done
-
Affects Version/s: 5.14.0 Alpha
-
Fix Version/s: 5.14.0 Beta 1
-
Component/s: Build tools: qdoc
-
Labels:None
-
Commits:c05f918435fab435d4492c3df24afcb872671a93 (qt/qttools/5.14)
Processing multiple .qdocconf files in single-exec mode results in all config variables being duplicated many times over. This is because the existing config variable map is not cleared when loading a new .qdocconf file.